...

    <string name="fill_in_value_turbidity_tube">Fill in the obtained turbidity value in the app.</string>
    <string name="clean_turbidity_tube">Empty the tube completely, clean if necessary, disconnect tubes and store them.</string>
    <string name="sd_70_rinse">Rinse the sensor with distilled water (never touch the electrode with anything) and place the protective cap back.</string>

    <!--pH Cl Manual Swatch Select Tester-->
    <string name="pt_open_lid">Open the lid of the tester.</string>
    <string name="pt_fill_compartments_1">Rinse the compartments with the water sample.</string>
    <string name="pt_fill_compartments_2">Fill the three compartments until the edge with the water sample. Avoid touching the water sample or the inside of the tester.</string>
    <string name="pt_read_result">Compare the sample colour with the intervals for pH and free chlorine to find the best match.</string>
    <string name="pt_select_result">Select the colour intervals that best match your sample.</string>
    <string name="pt_select_result_next">In the next screen, tap both colour intervals that best match your sample as shown in the example below.</string>
    <string name="pt_clean_compartments">Clean the compartments with distilled water.</string>
    <string name="pt_add_reagent_1">Add the Phenol Red tablet reagent directly from the foil into the left compartment (pH Phenol Red). Avoid touching the reagent tablets.</string>
    <string name="pt_add_reagent_2">Add the DPD No.1 tablet directly from the foil into the right (Cl DPD) compartment. Avoid touching the reagent tablets.</string>
    <string name="pt_close_shake">Close the box with the lid and shake until the reagents are dissolved. Be sure to place the lid correctly with the arrow facing you.</string>
    <string name="select_color_intervals">Select colour intervals</string>
    <string name="color_intervals">Color intervals</string>
    <string name="select_colors_before_continue">Select the colour intervals before continuing</string>

    <string name="checkit_comparator_uses">The Checkit Comparator uses two cells and a coloured disc.</string>
    <string name="insert_colored_disk">Insert the coloured disc in the comparator.</string>
    <string name="add_one_tablet_to_other_cell">Add one %reagent1 tablet to the other cell, and close it with a lid. Swirl the cell until the reagent is completely dissolved</string>
...
